# surreal

./: .gitmodules  CMakeLists.txt  main.cpp
include/: surreal.hpp
include/core/: application.hpp  base.hpp  config.hpp  event.hpp  exception.hpp  flags.hpp  log.hpp  window.hpp
include/platform/linux/: window.hpp
src/core/: application.cpp  log.cpp
src/platform/linux/: window.cpp
